--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -35,6 +35,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         
   test:
+    needs: [build]
     runs-on: ubuntu-latest
 
     steps:
